# BlackHoleSim

./: .gitignore  CMakeLists.txt  README.md
include/: camera.h  constants.h  engine.h  object.h
include/glad/: glad.h
src/: camera.cpp  engine.cpp  glad.c  main.cpp  object.cpp
